# Naive

./: CMakeLists.txt  README.md
include/: refined_itmcd_algorithm.h  refined_itmcd_data_structures.h  refined_itmcd_utils.h
src/: main.cpp  refined_itmcd_algorithm.cpp
tests/: test_refined_itmcd.cpp
